[metadata]
name = carol
author = jinlong.yang
author-email = 1990yangjinlong@163.com
summary = carol ssh server
classifier =
    Development Status :: 1 - Planning
    Environment :: Plugins
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    carol

[entry_points]
console_scripts =
    carol-bastion = carol.bastion.cmd:bastion
    carol-cleaner = carol.cleaner.cmd:cleaner
