[metadata]
name = colin
author = jinlong.yang
author-email = 1990yangjinlong@163.com
summary = colin ssh server
classifier =
    Development Status :: 1 - Planning
    Environment :: Plugins
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    colin

[entry_points]
console_scripts =
    colin-bastion = colin.bastion.cmd:bastion
    colin-cleaner = colin.cleaner.cmd:cleaner
