[metadata]
name = lanus
author = jinlong.yang
author-email = 1990yangjinlong@163.com
summary = lanus ssh server
classifier =
    Development Status :: 1 - Planning
    Environment :: Plugins
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    lanus

[entry_points]
console_scripts =
    lanus-bastion = lanus.bastion.cmd:bastion
    lanus-mockapi = lanus.mock.app:mock_api
